[workspace]
members = [
    "migrate",
    "response",
    "authorizer",
    "repository",
    "schedule-get",
    "schedule-update",
    "slack",
    "slack-usergroup-users-update",
    "hero-list",
    "hero-put",
    "hero-get",
    "hero-delete",
    "hero-delete-member",
    "user-create",
    "model"
]

[workspace.dependencies]
aws-config = "1.0.1"
aws_lambda_events = "0.12.1"
aws-sdk-dynamodb = "1.3.0"
aws-sdk-ssm = "1.3.0"
chrono = "0.4.31"
chrono-tz = "0.8.4"
futures = "0.3.4"
lambda_runtime = "0.8.3"
lambda_http = { version = "0.8.3", default-features = false, features = ["apigw_rest"] }
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt"] }
