[workspace]
resolver = "2"
members = [
    "response",
    "authorizer",
    "repository",
    "schedule-get",
    "schedule-update",
    "slack",
    "slack-usergroup-users-update",
    "hero-list",
    "hero-put",
    "hero-get",
    "hero-delete",
    "hero-delete-member",
    "user-create",
    "model"
]

[workspace.dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws_lambda_events = "0.15.0"
aws-sdk-dynamodb = "1.16.1"
aws-sdk-ssm = "1.17.0"
chrono = "0.4.31"
chrono-tz = "0.8.4"
futures = "0.3.4"
lambda_runtime = "0.10.0"
lambda_http = { version = "0.10.0", default-features = false, features = ["apigw_rest"] }
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "json"] }
