[workspace]
resolver = "2"
members = [
    "lambdas/*",
    "response",
    "repository",
    "slack",
    "model",
]

[workspace.dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.16.1"
aws-sdk-ssm = "1.17.0"
aws_lambda_events = "0.15.0"
chrono = "0.4.31"
chrono-tz = "0.9.0"
futures = "0.3.4"
lambda_runtime = "0.11.1"
lambda_http = { version = "0.11.1", default-features = false, features = ["apigw_rest"] }
openssl = { version = '0.10.64', features = ["vendored"] }
reqwest = { version = "0.12.3", features = ["native-tls-vendored", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "json"] }
