[package]
name = "authorizer"
version = "0.1.0"
edition = "2021"

[features]
vendored-openssl = ["openssl/vendored"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros"] }
lambda_runtime = "0.7.0"
aws-config = "0.49"
aws-sdk-dynamodb = "0.19"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
jsonwebtoken = "8.2.0"
azure_jwt = "0.2.1"
google-jwt-verify = "0.3.0"
repository = { path = "../repository" }
model = { path = "../model" }
openssl = { version = '0.10', features = ["vendored"] }