[package]
name = "hero-put"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.49"
aws-sdk-dynamodb = "0.19"
lambda_http = { version = "0.7.0", default-features = false, features = ["apigw_rest"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
model = { path = "../model" }
repository = { path = "../repository" }
response = { path = "../response" }