[package]
name = "migrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros"] }
lambda_runtime = "0.7.0"
aws-config = "0.49"
repository = { path = "../repository" }
model = { path = "../model" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0"