[package]
name = "migrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
lambda_runtime = { workspace = true }
aws-config = { workspace = true }
repository = { path = "../repository" }
model = { path = "../model" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }