[package]
name = "punch-clock-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.49.0"
aws-sdk-dynamodb = "0.21.0"
lambda_http = { version = "0.7", default-features = false, features = ["apigw_rest"] }
futures = "0.3.25"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
model = { path = "../model" }
repository = { path = "../repository" }
response = { path = "../response" }
chrono = "0"
chrono-tz = "0.8.0"
