[package]
name = "repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-dynamodb = { workspace = true }
aws-config = { workspace = true }
email_address = { workspace = true }
model = { path = "../model" }
maplit = "1.0.2"
futures = { workspace = true }
