[package]
name = "slack-usergroup-users-update"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.49"
lambda_http = { version = "0.7.0", default-features = false, features = ["apigw_rest"] }
serde = "1.0"
futures = "0.3.4"
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
model = { path = "../model" }
repository = { path = "../repository" }
response = { path = "../response" }
slack = { path = "../slack" }