[package]
name = "slack-usergroup-users-update"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { workspace = true }
lambda_runtime = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
model = { path = "../model" }
repository = { path = "../repository" }
response = { path = "../response" }
slack = { path = "../slack" }