[package]
name = "slack"
version = "0.1.0"
authors = ["Alex Weber <lexwbr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.3", features = ["json"] }
rusoto_core = "0.48"
rusoto_ssm = "0.47.0"
futures = "0.3.4"
model = { path = "../model" }
