[package]
name = "slack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
reqwest = { version = "0.11.3", features = ["json"] }
futures = "0.3.4"
aws-config = "0.49"
aws-sdk-ssm = "0.19"
model = { path = "../model" }