[package]
name = "slack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { worspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
aws-config = { workspace = true }
aws-sdk-ssm = { workspace = true }
model = { path = "../model" }