[package]
name = "authorizer"
version = "0.1.0"
edition = "2021"

[features]
vendored-openssl = ["openssl/vendored"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.2.0", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.22"
aws_lambda_events = "0.15.0"
azure_jwt = "0.2.2"
tokio = { version = "1.37.0", features = ["macros"] }
lambda_runtime = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "json"] }
jsonwebtoken = "7.2.0"
openssl = { version = '0.10', features = ["vendored"] }

repository = { path = "../../repository" }
model = { path = "../../model" }
