[package]
name = "authorizer"
version = "0.1.0"
edition = "2021"

[features]
vendored-openssl = ["openssl/vendored"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { workspace = true }
tokio = { workspace = true }
lambda_runtime = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws_lambda_events = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jsonwebtoken = "7.2.0"
azure_jwt = "0.2.2"
repository = { path = "../../repository" }
model = { path = "../../model" }
openssl = { version = '0.10', features = ["vendored"] }
