[package]
name = "custom-authorizer"
version = "0.1.0"
authors = ["Alex Weber <lexwbr@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.21", features = ["full"] }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime" }
serde_json = "1.0"
google-signin = "0.3.0"
model = { path = "../../model" }
repository = { path = "../../repository" }
rusoto_core = "0.44"
rusoto_dynamodb = "0.44"
