[package]
name = "custom-authorizer"
version = "0.1.0"
authors = ["Alex Weber <lexwbr@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
lambda_runtime = { git = "https://github.com/awslabs/aws-lambda-rust-runtime" }
serde_json = "1.0"
google-signin = "0.3.0"
model = { path = "../../model" }
repository = { path = "../../repository" }
rusoto_core = "0.46"
rusoto_dynamodb = "0.47"
