[package]
name = "custom-authorizer"
version = "0.1.0"
authors = ["Alex Weber <lexwbr@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
lambda_runtime = "0.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
model = { path = "../../model" }
repository = { path = "../../repository" }
rusoto_core = "0.48"
rusoto_dynamodb = "0.47"
jsonwebtoken = "7.2.0"
azure_jwt = "0.2.1"
google-jwt-verify = "0.3.0"
