[package]
name = "hero-delete-member"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
email_address = { workspace = true }
lambda_http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
model = { path = "../../model" }
repository = { path = "../../repository" }
response = { path = "../../response" }
