[package]
name = "hero-list"
version = "0.1.0"
authors = ["Alex Weber <lexwbr@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
lambda_runtime = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusoto_core = "0.47"
rusoto_dynamodb = "0.47"
response = { path = "../../response" }
model = { path = "../../model" }
