[package]
name = "schedule-get"
version = "0.1.0"
authors = ["Alex Weber <lexwbr@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusoto_core = "0.46"
rusoto_dynamodb = "0.46"
response = { path = "../../response" }
model = { path = "../../model" }
repository = { path = "../../repository" }
