[package]
name = "slack-usergroup-users-update"
version = "0.1.0"
authors = ["Alex Weber <lexwbr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.13", features = ["full"] }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusoto_core = "0.43"
rusoto_dynamodb = "0.43"
rusoto_ssm = "0.43.0"
response = { path = "../../response" }
model = { path = "../../model" }
repository = { path = "../../repository" }
tracing = "0.1.13"
reqwest = { version = "0.10.4", features = ["json"] }
futures = "0.3.4"
async-std = { version = "1.5", features = ["attributes"] }
