[package]
name = "slack-usergroup-users-update"
version = "0.1.0"
authors = ["Alex Weber <lexwbr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
lambda_runtime = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusoto_core = "0.47"
rusoto_dynamodb = "0.47"
rusoto_ssm = "0.47.0"
response = { path = "../../response" }
model = { path = "../../model" }
repository = { path = "../../repository" }
reqwest = { version = "0.11.3", features = ["json"] }
futures = "0.3.13"
async-std = { version = "1.9", features = ["attributes"] }
slack = { path = "../../slack" }
